# ctseg

./: .gitignore  LICENSE  README.md  pyproject.toml
2d_seg_and_video/: 2d_box_seg.ipynb  ct_video.ipynb  data_processing.ipynb  dataset.py  deeplesion_process.ipynb  model.py  transforms.py
3d/: ct-fm.ipynb  nnunet_data_proc.ipynb
3d_seg/: constants.py  ct-fm.ipynb  ctfm_utils.py  dataset.py  metrics.ipynb  model.py  nnunet_data_proc.ipynb  patching.ipynb  patching.py  process.py  run_inference_on_one_img.py  setup_utils.py  studies_ctfm_seg_mask.ipynb  studies_weak_labels.ipynb  visual.ipynb  visualize.py
3d_seg/metrics/: fold_0_metrics_lesion.csv  fold_0_metrics_voxel.csv
evaluation/: eval_utils.py  uls.py  uls_3d.ipynb
notebook/: 2d_box_seg.ipynb  ct_video.ipynb  dataset.py  deeplesion_process.ipynb  model.py  plot_utils.py  train_utils.py  transforms.py  video_utils.py
utils/: data.py  plot.py
