[tool.poetry]
name = "ctseg"
version = "0.1.0"
description = ""
authors = ["gnefihs <sfsy1@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyterlab = "^4.3.4"
ipywidgets = "^8.1.5"
nbformat = "^5.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
