[tool.poetry]
name = "ctseg"
version = "0.1.0"
description = ""
authors = ["gnefihs <sfsy1@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyterlab = "^4.3.4"
ipywidgets = "^8.1.5"
nbformat = "^5.10.4"
simpleitk = "^2.4.0"
matplotlib = "^3.10.0"
numpy = "^2.2.1"
arrow = "^1.3.0"
tqdm = "^4.67.1"
opencv-python = "^4.10.0.84"
scikit-image = "^0.25.0"
notebook = "^7.3.2"
pandas = "^2.2.3"
pynrrd = "^1.1.3"
nibabel = "^5.3.2"
seaborn = "^0.13.2"
statsmodels = "^0.14.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
